# tr-c19-provincial-case-numbers

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: scheduled-github-action.yml
data/: vaka_sayısı.csv
src/cscrawler/: main.py
src/cscrawler/parser/: homepage.py
tableau_wdc/: turkey_case_numbers_by_province.html  turkey_case_numbers_by_province.js
