[tool.poetry]
name = "cscrawler"
version = "0.1.0"
description = "Crawler for covid19.saglik.gov.tr"
authors = ["Jun Dir Liew <jundir@gmail.com>"]

[tool.poetry.scripts]
cscrawler = "cscrawler.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
click = "^7.1.2"
pandas = "^1.2.4"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
